itamae/roles/box-router/files/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Sat Jun 27 00:18:15 2015
*nat
:PREROUTING ACCEPT [18:4280]
:INPUT ACCEPT [18:4280]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 172.19.0.0/16 -d 172.18.0.0/16 -j ACCEPT
-A POSTROUTING -s 172.19.0.0/16 ! -d 172.19.0.0/16 -j MASQUERADE
COMMIT
# Completed on Sat Jun 27 00:18:15 2015
# Generated by iptables-save v1.4.21 on Sat Jun 27 00:18:15 2015
*filter
:INPUT ACCEPT [2652:180912]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1760:172040]
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.19.0.0/16 ! -d 172.19.0.0/19 -i eth0.200 -j ACCEPT
-A FORWARD -s 172.19.0.0/16 ! -d 172.19.128.0/19 -i eth0.100 -j ACCEPT
-A FORWARD -s 172.19.0.0/16 ! -d 172.19.224.0/19 -i eth0.1 -j ACCEPT
-A FORWARD -s 172.18.0.0/16 -d 172.19.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 172.20.0.0/16 -d 172.19.0.0/16 -i tun+ -j ACCEPT
-A FORWARD -s 172.19.0.0/16 -d 172.20.0.0/16 -o tun+ -j ACCEPT
COMMIT
# Completed on Sat Jun 27 00:18:15 2015
